UI router and ngRoute

--- a/SPA/index.html
+++ b/SPA/index.html
@@ -66,8 +66,7 @@
 
         app.directive("cynoSure", function(){
             return {
-                template : "<h2> Cynosure HSR {{$ctrl.something}} </h2>",
-                controller : 
+                template : "<h2> Cynosure HSR {{$ctrl.something}} </h2>"
             }
         })
 
